Bug 400191 - Kile crashes when right-clicking tab
Summary: Kile crashes when right-clicking tab
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.92
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords: drkonqi
: 395160 400700 405596 409185 409422 417236 418929 420337 421007 448446 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-23 10:41 UTC by Kishore Gopalakrishnan
Modified: 2022-01-17 04:53 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.93 (v3.0b3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2018-10-23 10:41:20 UTC
Application: kile (2.9.92)

Qt Version: 5.11.2
Frameworks Version: 5.51.0
Operating System: Linux 4.18.14-arch1-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
Steps to reproduce:
1. Open a .tex file in Kile
2. Right click on the tab

Observed result:
Kile crashes. We can tell it hasn't closed cleanly because it doesn't clean the temporary files even if configured to do so on exit. This happens even if multiple tabs are open.

The crash can be reproduced every time.

-- Backtrace:
Application: Kile (kile), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fcd917de880 (LWP 26039))]

Thread 7 (Thread 0x7fcd739e1700 (LWP 29450)):
#0  0x00007fcd9dcfd7a4 in read () from /usr/lib/libc.so.6
#1  0x00007fcd93c01782 in pa_read () from /usr/lib/pulseaudio/libpulsecommon-12.2.so
#2  0x00007fcd97d4455f in pa_mainloop_prepare () from /usr/lib/libpulse.so.0
#3  0x00007fcd97d44fd1 in pa_mainloop_iterate () from /usr/lib/libpulse.so.0
#4  0x00007fcd97d45091 in pa_mainloop_run () from /usr/lib/libpulse.so.0
#5  0x00007fcd97d535ae in ?? () from /usr/lib/libpulse.so.0
#6  0x00007fcd93c319fc in ?? () from /usr/lib/pulseaudio/libpulsecommon-12.2.so
#7  0x00007fcd9ae75a9d in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007fcd9dd0cb23 in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7fcd85675700 (LWP 26045)):
#0  0x00007fcd9ae7bafc in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcd85c0f1ac in ?? () from /usr/lib/dri/i965_dri.so
#2  0x00007fcd85c0eee8 in ?? () from /usr/lib/dri/i965_dri.so
#3  0x00007fcd9ae75a9d in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fcd9dd0cb23 in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7fcd877fe700 (LWP 26043)):
#0  0x00007fcd9ae7bafc in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcd9b0fc71c in QWaitCondition::wait (this=0x5617ecb07a24, readWriteLock=0x80, time=0) at thread/qwaitcondition_unix.cpp:223
#2  0x00007fcd74003a00 in ?? ()
#3  0x00007fcd877fdd00 in ?? ()
#4  0x00005617f22572d0 in ?? ()
#5  0xad5e467e4daf0200 in ?? ()
#6  0x00005617f22572d0 in ?? ()
#7  0x00005617ecb0f130 in ?? ()
#8  0x00005617f22572d0 in ?? ()
#9  0x00005617ecb0f160 in ?? ()
#10 0x00007fcd877fdcf0 in ?? ()
#11 0x00007fcd74003a00 in ?? ()
#12 0x00007fcd877fdd00 in ?? ()
#13 0x00007fcd9e0465a1 in KileParser::ParserThread::run (this=0x0) at /usr/src/debug/kile-2.9.92/src/parser/parserthread.cpp:169
#14 0x00007fcd9b0fbf65 in QThreadPrivate::start (arg=0x5617ecb0f130) at thread/qthread_unix.cpp:388
#15 0x00007fcd9ae75a9d in start_thread () from /usr/lib/libpthread.so.0
#16 0x00007fcd9dd0cb23 in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7fcd87fff700 (LWP 26042)):
#0  0x00007fcd9ae7bafc in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcd9b0fc71c in QWaitCondition::wait (this=0x5617ecb17490, readWriteLock=0x80, time=0) at thread/qwaitcondition_unix.cpp:223
#2  0x00007fcd7c01bf50 in ?? ()
#3  0x00007fcd87ffed00 in ?? ()
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fcd8e7bd700 (LWP 26041)):
#0  0x00007fcd9dcfd7a4 in read () from /usr/lib/libc.so.6
#1  0x00007fcd98850781 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fcd988a0a50 in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#3  0x00007fcd988a1e86 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007fcd988a1fce in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0x00007fcd9b2fcfe4 in QEventDispatcherGlib::processEvents (this=0x7fcd80000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:428
#6  0x00007fcd9b2a88cc in std::__atomic_base<int>::load (__m=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qstack.h:61
#7  QAtomicOps<int>::load<int> (_q_value=...) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:227
#8  QBasicAtomicInteger<int>::load (this=<optimized out>) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:103
#9  QtPrivate::RefCount::isShared (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qrefcount.h:101
#10 QVector<QEventLoop*>::isDetached (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:106
#11 QVector<QEventLoop*>::detach (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:383
#12 QVector<QEventLoop*>::data (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:127
#13 QStack<QEventLoop*>::pop (this=0x34) at ../../include/QtCore/../../src/corelib/tools/qstack.h:62
#14 QEventLoop::LoopReference::~LoopReference (this=<synthetic pointer>, __in_chrg=<optimized out>) at kernel/qeventloop.cpp:199
#15 QEventLoop::exec (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:206
#16 0x00007fcd9b0f1eb9 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:529
#17 0x00007fcd9c143ba6 in QHashData::firstNode (this=0x7fcd8e7bcd78) at ../../include/QtCore/../../src/corelib/tools/qhash.h:130
#18 QHash<QString, QDBusConnectionPrivate*>::constBegin (this=0x7fcd9c1bf078 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder+24>) at ../../include/QtCore/../../src/corelib/tools/qhash.h:459
#19 QDBusConnectionManager::run (this=0x7fcd9c1bf060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:182
#20 0x00007fcd9b0fbf65 in QThreadPrivate::start (arg=0x7fcd9c1bf060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:388
#21 0x00007fcd9ae75a9d in start_thread () from /usr/lib/libpthread.so.0
#22 0x00007fcd9dd0cb23 in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fcd9027f700 (LWP 26040)):
#0  0x00007fcd9dd01c21 in poll () from /usr/lib/libc.so.6
#1  0x00007fcd992d7630 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007fcd992d92db in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007fcd91348c5a in QXcbEventReader::run (this=0x5617ec84d790) at qxcbconnection.h:409
#4  0x00007fcd9b0fbf65 in QThreadPrivate::start (arg=0x5617ec84d790) at thread/qthread_unix.cpp:388
#5  0x00007fcd9ae75a9d in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007fcd9dd0cb23 in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fcd917de880 (LWP 26039)):
[KCrash Handler]
#6  0x00007fcd9bc1ff87 in qGetPtrHelper<QScopedPointer<QObjectData> > (p=...) at ../../include/QtCore/../../src/corelib/global/qglobal.h:1038
#7  QAction::d_func (this=this@entry=0x0) at kernel/qaction.h:63
#8  QAction::setData (this=this@entry=0x0, data=...) at kernel/qaction.cpp:1121
#9  0x00007fcd9e01e0b8 in KileView::Manager::tabContext (this=0x5617ecae3e00, pos=...) at /usr/include/qt/QtCore/qmetatype.h:1767
#10 0x00007fcd9b2d3bd0 in QMutexLocker::relock (this=<synthetic pointer>) at ../../include/QtCore/../../src/corelib/thread/qmutex.h:225
#11 QMetaObject::activate (sender=0x5617ed6efe20, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3761
#12 0x00007fcd9bc48f76 in QWidget::customContextMenuRequested (this=this@entry=0x5617ed6efe20, _t1=...) at .moc/moc_qwidget.cpp:658
#13 0x00007fcd9bc644db in QWidget::event (this=this@entry=0x5617ed6efe20, event=event@entry=0x7ffeed5db000) at ../../include/QtGui/../../src/gui/kernel/qevent.h:522
#14 0x00007fcd9bdd178c in QTabBar::event (this=0x5617ed6efe20, event=0x7ffeed5db000) at widgets/qtabbar.cpp:1691
#15 0x00007fcd9bc23e14 in QApplicationPrivate::notify_helper (this=this@entry=0x5617ec832010, receiver=receiver@entry=0x5617ed6efe20, e=e@entry=0x7ffeed5db000) at kernel/qapplication.cpp:3727
#16 0x00007fcd9bc2bb90 in QApplication::notify (this=<optimized out>, receiver=0x5617ed6efe20, e=0x7ffeed5db000) at kernel/qapplication.cpp:3347
#17 0x00007fcd9b2a9c39 in QCoreApplication::notifyInternal (this=<optimized out>, receiver=0x0, event=0x7ffeed5daa18) at kernel/qcoreapplication.cpp:1015
#18 0x00007ffeed5db000 in ?? ()
#19 0x00005617ed6efe20 in ?? ()
#20 0x00007ffeed5db400 in ?? ()
#21 0x00007fcd9b6661c1 in QMouseEvent::QMouseEvent (this=0x0, type=3982338704, localPos=..., button=Qt::LeftButton, buttons=..., modifiers=...) at kernel/qevent.cpp:266
#22 0xad5e467e4daf0200 in ?? ()
#23 0x00007ffeed5dafe0 in ?? ()
#24 0x00007ffeed5db000 in ?? ()
#25 0x00007ffeed5daff0 in ?? ()
#26 0x00005617ed6efe20 in ?? ()
#27 0x00007ffeed5dafe0 in ?? ()
#28 0x00007fcd9bc7f194 in QWidgetWindow::handleMouseEvent (this=<optimized out>, event=0x7ffeed5db400) at kernel/qwidgetwindow.cpp:667
#29 0x00007fcd9bc815d5 in QWidgetWindow::event (this=0x5617ec8c9010, event=0x7ffeed5db400) at kernel/qwidgetwindow.cpp:281
#30 0x00007fcd9bc23e14 in QApplicationPrivate::notify_helper (this=this@entry=0x5617ec832010, receiver=receiver@entry=0x5617ec8c9010, e=e@entry=0x7ffeed5db400) at kernel/qapplication.cpp:3727
#31 0x00007fcd9bc2b6e1 in QApplication::notify (this=0x7ffeed5db860, receiver=0x5617ec8c9010, e=0x7ffeed5db400) at kernel/qapplication.cpp:3486
#32 0x00007fcd9b2a9c39 in QCoreApplication::notifyInternal (this=<optimized out>, receiver=0x0, event=0x7ffeed5daa18) at kernel/qcoreapplication.cpp:1015
#33 0x00007ffeed5db400 in ?? ()
#34 0x00005617ec8c9010 in ?? ()
#35 0x00007ffeed5db390 in ?? ()
#36 0x00007fcd9b66633d in QHoverEvent::QHoverEvent (this=0x0, type=3982338704, pos=..., oldPos=..., modifiers=...) at kernel/qevent.cpp:653
#37 0x00007ffeed5db2cf in ?? ()
#38 0xad5e467e4daf0200 in ?? ()
#39 0x00005617ec8c9010 in ?? ()
#40 0x0000000000000002 in ?? ()
#41 0x00005617ec8c9010 in ?? ()
#42 0x00005617f22dec40 in ?? ()
#43 0x00007ffeed5db400 in ?? ()
#44 0x00007fcd9b6540dc in QGuiApplicationPrivate::processMouseEvent (e=0x7ffeed5db400) at kernel/qguiapplication.cpp:2033
#45 0x00007fcd9b656066 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x5617f22dec40) at kernel/qguiapplication.cpp:1846
#46 0x00007fcd9b62fa3c in QWindowSystemInterface::deferredFlushWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1012
#47 0x00007ffeed5db680 in ?? ()
#48 0x00005617ee86db14 in ?? ()
#49 0x00007fcd913dee1d in QPAEventDispatcherGlib::processEvents (this=0x5617ec8bcef0, flags=...) at qeventdispatcher_glib.cpp:70
#50 0x00007fcd9b2a88cc in std::__atomic_base<int>::load (__m=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qstack.h:61
#51 QAtomicOps<int>::load<int> (_q_value=...) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:227
#52 QBasicAtomicInteger<int>::load (this=<optimized out>) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:103
#53 QtPrivate::RefCount::isShared (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qrefcount.h:101
#54 QVector<QEventLoop*>::isDetached (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:106
#55 QVector<QEventLoop*>::detach (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:383
#56 QVector<QEventLoop*>::data (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvector.h:127
#57 QStack<QEventLoop*>::pop (this=0x34) at ../../include/QtCore/../../src/corelib/tools/qstack.h:62
#58 QEventLoop::LoopReference::~LoopReference (this=<synthetic pointer>, __in_chrg=<optimized out>) at kernel/qeventloop.cpp:199
#59 QEventLoop::exec (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:206
#60 0x00007fcd9b2b0bc6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1342
#61 0x00007fcd9b64ac0e in QGuiApplication::exec () at kernel/qguiapplication.cpp:1761
#62 0x00007fcd9bc23d86 in QApplication::exec () at kernel/qapplication.cpp:2901
#63 0x00007fcd9e0356d1 in kdemain (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kile-2.9.92/src/main.cpp:199
#64 0x00007fcd9dc35223 in __libc_start_main () from /usr/lib/libc.so.6
#65 0x00005617ec6cf05e in _start ()
[Inferior 1 (process 26039) detached]

Reported using DrKonqi
Comment 1 Michel Ludwig 2018-10-28 18:59:55 UTC
Git commit f9de688e223be3b77268d36e237a838555d0f533 by Michel Ludwig.
Committed on 28/10/2018 at 18:58.
Pushed by mludwig into branch 'master'.

Search for the 'file_save_copy_as' action inside 'KTextEditor::View' now

In that way, Kile doesn't crash after right-clicking on a view tab

M  +29   -18   src/kileviewmanager.cpp

https://commits.kde.org/kile/f9de688e223be3b77268d36e237a838555d0f533
Comment 2 Christoph Feck 2018-10-29 01:24:36 UTC
*** Bug 395160 has been marked as a duplicate of this bug. ***
Comment 3 Michel Ludwig 2018-11-05 17:36:52 UTC
*** Bug 400700 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2019-03-31 08:05:38 UTC
*** Bug 405596 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2019-06-25 19:36:37 UTC
*** Bug 409185 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2019-07-02 18:41:40 UTC
*** Bug 409422 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2020-02-27 13:33:58 UTC
*** Bug 417236 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2020-04-09 19:36:29 UTC
*** Bug 418929 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2020-05-14 13:29:00 UTC
*** Bug 420337 has been marked as a duplicate of this bug. ***
Comment 10 Kishore Gopalakrishnan 2022-01-17 04:49:33 UTC
*** Bug 448446 has been marked as a duplicate of this bug. ***
Comment 11 Kishore Gopalakrishnan 2022-01-17 04:53:18 UTC
*** Bug 421007 has been marked as a duplicate of this bug. ***