Search for the 'file_save_copy_as' action inside 'KTextEditor::View' now

In that way, Kile doesn't crash after right-clicking on a view tab

BUG: 400191